--- a/public/global.css
+++ b/public/global.css
@@ -16,6 +16,10 @@
   src: url('fonts/Roboto-Bold.ttf') format('truetype');
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
 	--main: #F4B000;
 	font-family: 'Roboto', sans-serif;
@@ -23,12 +27,18 @@ body {
 	font-size: 16px;
 	line-height: 18px;
 	color: var(--fg);
+  margin: 0;
+  width: 100%;
 }
 
 body.theme_dark {
 	--fg: #FCFBF7;
 	--subtle: #918F8A;
 	background: radial-gradient(circle at 50% 50%, #120C01 0%, #000000 100%);
+}
+
+body.theme_dark .team-member img {
+  filter: grayscale(1);
 }
 
 body.theme_light {
@@ -39,6 +49,7 @@ body.theme_light {
 
 .subtle {
 	--fg: var(--subtle);
+  color: var(--fg);
 }
 
 .headline {
