--- a/public/global.css
+++ b/public/global.css
@@ -36,6 +36,11 @@ body.theme_dark {
 	--subtle: #918F8A;
   --button-bg: var(--fg);
   --button-bg-hover: var(--subtle);
+  --glass-bg: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%), radial-gradient(149.08% 93.3% at 38.75% 72.1%, #000000 0%, #231900 0.01%, #4D4D4D 100%);
+  --glass-shadow: inset -1px 1px 1px rgba(255, 255, 255, 0.2), inset 2px 2px 16px rgba(103, 103, 103, 0.6);
+  --glass-bg-lit: radial-gradient(91.67% 122.17% at 69.17% -11.17%, #FFA300 0%, #2D1C00 100%);
+  --glass-shadow-lit: inset -1px 1px 1px rgba(255, 255, 255, 0.4), inset 0px 6px 15px rgba(255, 162, 0, 0.4);
+
 	background: radial-gradient(circle at 50% 50%, #120C01 0%, #000000 100%);
 }
 
@@ -48,6 +53,11 @@ body.theme_light {
 	--subtle: #BFBFBF;
   --button-bg: var(--main);
   --button-bg-hover: var(--subtle);
+  --glass-bg: linear-gradient(180deg, rgba(244, 244, 244, 0.9) 0.82%, #E9E9E9 100%, rgba(234, 234, 234, 0) 100%);
+  --glass-shadow: inset -1px 1px 1px rgba(255, 255, 255, 0.5), inset 0px 0px 20px rgba(207, 207, 207, 0.5);
+  --glass-bg-lit: linear-gradient(180deg, #FFF2D1 0.82%, #FFD66C 100%);
+  --glass-shadow-lit: inset -1px 1px 1px rgba(255, 255, 255, 0.5), inset 0px 0px 20px rgba(255, 176, 57, 0.8);
+
 	background: #fff;
 }
 
