--- a/src/templates/index.mustache
+++ b/src/templates/index.mustache
@@ -7,6 +7,7 @@
   <title>Stories</title>
   <link rel="stylesheet" href="/build/bundle.css">
   <link rel="stylesheet" href="/global.css">
+  <link rel="icon" href="/images/1x/favicon-s-{{ theme }}.png" type="image/png">
   <script>
     const slide = {
       alias: '{{{ alias }}}',
