--- a/public/global.css
+++ b/public/global.css
@@ -25,7 +25,11 @@ figure {
 }
 
 body {
+  --black: #261C00;
 	--main: #F4B000;
+  --grey: #918F8A;
+  --grey-light: #BFBFBF;
+  --white: #FCFBF7;
 	font-family: 'Roboto', sans-serif;
 	font-weight: 500;
 	font-size: 16px;
@@ -36,8 +40,8 @@ body {
 }
 
 body.theme_dark {
-	--fg: #FCFBF7;
-	--subtle: #918F8A;
+	--fg: var(--white);
+	--subtle: var(--grey);
   --button-bg: var(--fg);
   --button-bg-hover: var(--subtle);
   --glass-bg: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%), radial-gradient(149.08% 93.3% at 38.75% 72.1%, #000000 0%, #231900 0.01%, #4D4D4D 100%);
@@ -63,8 +67,8 @@ body.theme_dark .team-member img {
 }
 
 body.theme_light {
-	--fg: #261C00;
-	--subtle: #BFBFBF;
+	--fg: var(--black);
+	--subtle: var(--grey-light);
   --button-bg: var(--main);
   --button-bg-hover: var(--subtle);
   --glass-bg: linear-gradient(180deg, rgba(244, 244, 244, 0.9) 0.82%, #E9E9E9 100%, rgba(234, 234, 234, 0) 100%);
