--- a/public/global.css
+++ b/public/global.css
@@ -58,6 +58,14 @@ body:not(.theme_light) {
   --activity-bar2-shadow: 2px 2px 10px 0px rgba(242, 159, 13, 0.2) inset, -1px 1px 1px 0px rgba(255, 255, 255, 0.2) inset;
   --activity-bar3-bg: radial-gradient(2258.03% 620.37% at 83.33% 88.95%, #201502 0%, #C7830A 100%);
   --activity-bar3-shadow: 2px 2px 10px 0px rgba(242, 159, 13, 0.9) inset, -1px 1px 1px 0px rgba(255, 255, 255, 0.2) inset;
+  --diagram-indicator0-bg: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(255, 163, 0, 0.8) 71.88%, rgba(91, 58, 0, 0.8) 100%);
+  --diagram-indicator0-shadow: 0px 0px 20px -8px rgba(248, 158, 0, 0.2), inset -1px 1px 1px rgba(255, 255, 255, 0.5), inset 0px 0px 20px rgba(255, 162, 0, 0.9);
+  --diagram-indicator1-bg: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(99, 63, 0, 0.5) 72.92%, rgba(15, 9, 0, 0.5) 100%);
+  --diagram-indicator1-shadow: 0px 0px 20px -8px rgba(147, 93, 0, 0.2), inset -1px 1px 1px rgba(255, 255, 255, 0.5), inset 0px 0px 20px rgba(202, 129, 0, 0.9);
+  --diagram-indicator2-bg: radial-gradient(100% 100% at 50% 0%, rgba(151, 151, 151, 0.5) 0%, rgba(41, 41, 41, 0.5) 100%);
+  --diagram-indicator2-shadow: inset -1px 1px 1px rgba(255, 255, 255, 0.5);
+  --diagram-indicator3-bg: radial-gradient(100% 100% at 50% 0%, rgba(62, 62, 62, 0.5) 0%, rgba(40, 40, 40, 0.5) 100%);
+  --diagram-indicator3-shadow: inset -1px 1px 1px rgba(255, 255, 255, 0.5);
 
 	background: radial-gradient(circle at 50% 50%, #120C01 0%, #000000 100%);
 }
@@ -85,6 +93,17 @@ body.theme_light {
   --activity-bar2-shadow: 0px 0px 20px 0px rgba(255, 176, 57, 0.4) inset, -1px 1px 1px 0px rgba(255, 255, 255, 0.5) inset;
   --activity-bar3-bg: radial-gradient(66.02% 86.49% at -16.18% 13.51%, rgba(255, 186, 6, 0.85) 0%, #FFF2AD 100%);
   --activity-bar3-shadow: 0px 0px 20px 0px rgba(255, 176, 57, 0.4) inset, -1px 1px 1px 0px rgba(255, 255, 255, 0.5) inset;
+  --diagram-indicator0-bg: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(255, 184, 0, 0.56) 81.25%, rgba(255, 239, 153, 0.32) 100%);
+  --diagram-indicator0-shadow: inset -1px 1px 1px rgba(255, 255, 255, 0.5), inset 0px 0px 20px rgba(255, 176, 57, 0.9);
+  --diagram-indicator1-bg: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(255, 184, 0, 0.24) 81.25%, rgba(255, 239, 153, 0.12) 100%);
+  --diagram-indicator1-shadow: inset -1px 1px 1px rgba(255, 255, 255, 0.5), inset 0px 0px 20px rgba(255, 176, 57, 0.4);
+  --diagram-indicator2-bg: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(255, 184, 0, 0.24) 81.25%, rgba(255, 239, 153, 0.12) 100%);
+  --diagram-indicator2-shadow: inset -1px 1px 1px rgba(255, 255, 255, 0.5), inset 0px 0px 20px rgba(255, 176, 57, 0.4);
+  --diagram-indicator2-bg: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(166, 166, 166, 0.1725) 82.81%, rgba(203, 203, 203, 0.05) 92.19%);
+  --diagram-indicator2-shadow: inset -1px 1px 1px rgba(255, 255, 255, 0.5), inset 0px 0px 20px rgba(105, 105, 105, 0.2);
+  --diagram-indicator3-bg: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(191, 191, 191, 0.345) 82.81%, rgba(228, 228, 228, 0.1) 92.19%);
+  --diagram-indicator3-shadow: inset -1px 1px 1px rgba(255, 255, 255, 0.5), inset 0px 0px 20px rgba(131, 131, 131, 0.6);
+
 
 	background: #fff;
 }
