Implement highlighting on press

--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,10 @@
+button {
+  color: unset;
+  font-size: unset;
+  line-height: unset;
+  box-sizing: unset;
+}
+
 @font-face {
   font-family: 'Roboto';
 	font-weight: 400;
