Reset the button styles

--- a/public/global.css
+++ b/public/global.css
@@ -3,6 +3,12 @@ button {
   font-size: unset;
   line-height: unset;
   box-sizing: unset;
+  font: unset;
+  letter-spacing: unset;
+  word-spacing: unset;
+  text-transform: unset;
+  text-indent: unset;
+  text-shadow: unset;
 }
 
 @font-face {
