--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -193,4 +193,40 @@
       @include font-size(14px);
     }
   }
+
+  @media #{queries.portrait(screens.$ipad)} {
+    body {
+      @include font-size(18px);
+    }
+
+    .headline {
+      @include font-size(36px);
+    }
+
+    .subhead {
+      @include font-size(26px);
+    }
+
+    .caption {
+      @include font-size(16px);
+    }
+  }
+
+  @media #{queries.landscape(screens.$ipad)} {
+    body {
+      @include font-size(22px);
+    }
+
+    .headline {
+      @include font-size(36px);
+    }
+
+    .subhead {
+      @include font-size(26px);
+    }
+
+    .caption {
+      @include font-size(18px);
+    }
+  }
 }
