--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -214,7 +214,7 @@
 
   @media #{queries.landscape(screens.$ipad)} {
     body {
-      @include font-size(22px);
+      @include font-size(20px);
     }
 
     .headline {
@@ -227,6 +227,24 @@
 
     .caption {
       @include font-size(18px);
+    }
+  }
+
+  @media #{queries.landscape(screens.$desktop-l)} {
+    body {
+      @include font-size(24px);
+    }
+
+    .headline {
+      @include font-size(40px);
+    }
+
+    .subhead {
+      @include font-size(30px);
+    }
+
+    .caption {
+      @include font-size(22px);
     }
   }
 }
